Outline Project Specification updated to include tasks.

--- a/Doc/Outline_Project_Spec/MMP_OutlineProjectSpecification.tex
+++ b/Doc/Outline_Project_Spec/MMP_OutlineProjectSpecification.tex
@@ -69,12 +69,30 @@ In order to complete this project, I will be following an agile methodology cons
       \item[Parrot AR Drone 2.0 API/SDK]
         In this task, there will be investigation of the API and SDK of the drone I will be using as a platform for my system. This is to gain an understanding of the system before development gets underway, to improve development time. 
     \end{description}
+  \item[Development]
+    This will be split into a few sub tasks:
+    \begin{description}
+      \item[Vision]
+        This will be the development of the Vision-based system and is likely to be the main part of the project. This will involve detection of potential risks, determining if they are a risk and sending the appropriate information to the controller.
+      \item[Drone controller]
+        This is the part of the project that will be controlling the drone itself, sending commands to perform particular movements. This is necessary for applying the vision system to the drone, as it controls the drones movements and sends the camera feeds into the vision system.
+      \item[Testing]
+        This task is intertwined in both the previous development tasks and will be done in both. During both tasks, I will be doing continued testing of the vision and controller, in order to make sure it's working correctly and does what it is intended to do. Also, integration testing will be taking place to check overall functionality when applied to the drone. 
+    \end{description}
+  \item[Meetings and progress/process tracking]
+    Throughout the project there will be weekly supervisor meetings to discuss progress and to help solve any problems that can't otherwise be solved. In order to keep these meetings properly informed, progress and process tracking will be taking place through the form of documentation in the repository. This will include progress made, any changes that have been made to the process and reasoning behind the decisions I made.
+  \item[Demonstration preparation]
+    During the time on this project, there will be 2 demonstrations, both of which will need to be prepared for beforehand. This preparation will involve implementation on the drone, making sure all the technology is usable (charged, working, accessible) and preparation of what information needs to be expressed to show progress. For the mid-project demonstration it's hoped that basic risk detection of a simplified risk (E.g A designed risk like a red square/circle). In the final demonstration, the drone should have a fully implemented vision system, with appropriate reactions to the risks. These plans are subject to change however, depending on how much has been completed at the time of the presentations.
+  \item[Final report write up]
+    The final report will mostly be written once development has finished, however the report will have some parts that are written during development, after particular parts of development have finished. This document will have sections that can't be completed during development however, such as critical analysis of the process over the project and progress made. 
 \end{description}
 
 %==============================================================================
 \section{Project deliverables}
 %==============================================================================
-
+\begin{description}
+  \item[Final reports]
+\end{description}
 %
 % Start to comment out / remove the following lines. They are only provided for instruction for this example template.  You don't need the following section title, because it will be added as part of the bibliography section. 
 %
@@ -94,8 +112,8 @@ In order to complete this project, I will be following an agile methodology cons
 
 \nocite{*} % include everything from the bibliography, irrespective of whether it has been referenced.
 
-% the following line is included so thadded to the previous page for the bibliography. To address this, a newline is added so that it appears on the first page for the bibliography. 
-at the bibliography is also shown in the table of contents. There is the possibility that this is \newpage
+% the following line is included so that the bibliography is also shown in the table of contents. There is the possibility that this is added to the previous page for the bibliography. To address this, a newline is added so that it appears on the first page for the bibliography. 
+%\newpage
 \addcontentsline{toc}{section}{Initial Annotated Bibliography} 
 
 %
