--- a/Doc/Outline_Project_Spec/mmp.bib
+++ b/Doc/Outline_Project_Spec/mmp.bib
@@ -4,7 +4,7 @@
 %@string{aij= "Artificial Intelligence"}
 
 % This is an example of a URL reference
-% Note you should try to identify authorship of web resources
+% Note you should try to identify autht corship of web resources
 % Also note you should include the date you last accessed the page.
 @MISC{PersonalKanban,
  author={Jim Benson and Tonianne DeMaria Barry},
