Updated draft version of mMethodology to release.

--- a/Doc/Methodology/Latex/jgj2_Methodology.tex
+++ b/Doc/Methodology/Latex/jgj2_Methodology.tex
@@ -26,8 +26,8 @@
 \projecttitle{Mobile Vision Based Risk Detection: \\Using computer vision to detect potential risks in a Parrot AR.Drone 2.0}
 \projecttitlememoir{Mobile Vision Based Risk Detection} %same as the project title or abridged version for page header
 \reporttitle{Methodology for the project}
-\version{0.1}
-\docstatus{Draft}
+\version{1.0}
+\docstatus{Release}
 \modulecode{CS39440}
 \degreeschemecode{G400}
 \degreeschemename{Computer Science}
@@ -46,24 +46,24 @@
 %==============================================================================
 \section{Introduction}
 %==============================================================================
-For this project, a methodology will have to be followed. This is in order to keep the project on track and keeping forward progress. This document will introduce the initial methodology, explaining the thoughts behind the decisions and showing the initial plan.\\
+For this project, a methodology will have to be followed. This is in order to keep the project on track and keeping forward progress. This document will introduce the initial methodology, explaining the thoughts behind any decisions and explaining any artifacts that will be produced.\\
 
-The initial methodology will draw from mainly scrum and kanban, taking an iterative approach to development and process improvement from scrum and using a kanban workflow for use throughout the sprints.\\
+The initial methodology will draw mainly from scrum and kanban, taking an iterative approach to development and process improvement from scrum and using a kanban workflow for use throughout the sprints.\\
 
-Sprints are being used so constant improvement can be made to the process being used, as well as allowing for artifacts like burn-down charts to be introduced. The kanban system is used during the sprint to ensure work is done effectively and fully tested, it also forces a limit, which will stop over-working, and provides a motivation to finish all the tasks for the sprint, which will stop under-working. 
+Sprints are being used so that constant improvement can be made to the process being used, as well as allowing for artifacts like burn-down charts to be introduced. The kanban system is used during the sprint to ensure work is done effectively and fully tested. It also forces a limit and provides a motivation to finish all the tasks for the sprint, which should help improve work rate. 
 %==================================================================== ==========
 \section{Overarching methodology}
 %==============================================================================
 \begin{description}
   \item[Sprints]
-    Each development iteration will take place in a sprint, with each sprint lasting 2 weeks. During this time, a particular number of stories should be completed from the sprint backlog and if they're not, they'll be added back onto the project backlog. During the sprint, a kanban work flow will be used.\\
+    Each development iteration will take place in a sprint, with each sprint lasting 2 weeks. During this time, a particular number of stories should be completed from the sprint backlog and if they're not, they'll be added back onto the project backlog.\\
     
-   The 2 week sprint will allow for supervisory meetings at the end of the sprint and beginning of a sprint, as well as a mid-sprint meeting. At the beginning of the sprint, the meeting can discuss what is going to be done during the week and any issues that are going to effect the upcoming sprint. This same meeting would also be used for the end of each sprint, so issues that affected the previous sprint can start to be resolved or discussed and the supervisor can be made aware of the progress that has been made.\\
+   The 2 week sprint will allow for supervisory meetings at the end and beginning of a sprint, as well as a mid-sprint meeting. At the beginning of the sprint, the meeting can discuss what is going to be done during the week and any issues that are going to effect the upcoming sprint. This same meeting would also be used for the end of each sprint, so issues that affected the previous sprint can start to be resolved or discussed and the supervisor can be made aware of the progress that has been made.\\
    
-   The mid-sprint meeting would be used to discuss issues with work that is currently happening, how it's going and to also get help with anything that is particularly difficult.\\
+   The mid-sprint meeting would be used to discuss issues with work that is currently happening, how it's going and to also get help with anything that is particularly difficult. A mid-sprint meeting also means that issues can be solved before the next sprint, stopping slowing down of progress on the project.\\
    
   \item[Kanban work flow]
-    This will be used with the stories for the current sprint and will have the following stages:
+    This will be used with the stories for the current sprint and will have the following value stream:
     \begin{description}
       \item[Sprint Backlog]
         Contains all the stories from the current sprint that have not yet been completed. At the start of this process, 10 stories will be added to each sprint backlog. This is an arbitrary number, which will be altered depending on the amount of work that is necessary to be undertaken throughout the project.
@@ -75,7 +75,7 @@ Sprints are being used so constant improvement can be made to the process being 
         Any stories that are finished and have passed all tests will be held in the completed stage. These stories shouldn't need to be touched again once they've been moved into this stage and should only be moved back out if it's absolutely necessary.
     \end{description}
   \item[Sprint Review]
-    As this is a single person project, it will be impossible to have a discussion with peers about how the sprint itself went. However, at the end of each sprint, a small document discussing the sprint will be produced. In this, any problems with the sprint itself will be highlighted, for example if there was too much work for the single sprint or too little work so the sprint ended early, or if the WIP limit was too small so it slowed down progress or too large, so the work was overwhelming. 
+    As this is a single person project, it will be impossible to have a discussion with peers about how the sprint itself went. However, at the end of each sprint, a small document discussing the sprint will be produced. In this, any problems with the sprint itself will be highlighted, for example if the WIP limit was too small so it slowed down progress or too large, so the work was overwhelming. 
     
     After the discussion of the issues, a potential solution will be chosen and noted in the document. This solution will be implemented in the next sprint and this will allow for an evolving method, which will iteratively improve. This will also allow for documentation of the changes in the process, which will be useful for the final report.
   \item[Progress Review]
