--- a/Doc/Bibliography/mmp.bib
+++ b/Doc/Bibliography/mmp.bib
@@ -2,6 +2,7 @@
 % This is an example of a string: this is the way you do variables in BiBTex
 % @string{variable_name="string the variable_name refers to"}
 %@string{aij= "Artificial Intelligence"}
+@string{drn = "AR.Drone 2.0"}
 
 % This is an example of a URL reference
 % Note you should try to identify autht corship of web resources
@@ -25,5 +26,13 @@
  title={User guides for Ar.Drone 2.0},
  howpublished={\url{http://ardrone2.parrot.com/support/}},
  note={Accessed February 2016},
-  annote={The user guides for the AR.Drone 2.0, with safety guidelines in the quick start manual.}
+  annote={The user guides for the drn, with safety guidelines in the quick start manual.}
+}
+
+@MISC{DroneDevGuide,
+ author={Stephane Piskorski, Nicolas Brulez, Pierre Eline, Frederic D'Haeyer}
+ title ={AR.Drone Developer Guide},
+ howpublished={\url{}},
+ note={Accessed February 2016},
+  annote={The developer guide for the drn}
 }
