Updated README, updated bibliography, logs for sprint starting 22/02/2016.

--- a/Doc/Bibliography/mmp.bib
+++ b/Doc/Bibliography/mmp.bib
@@ -30,7 +30,7 @@
 }
 
 @MISC{DroneDevGuide,
- author={Stephane Piskorski, Nicolas Brulez, Pierre Eline, Frederic D'Haeyer}
+ author={Stephane Piskorski\, Nicolas Brulez\, Pierre Eline\, Frederic D'Haeyer},
  title ={AR.Drone Developer Guide},
  howpublished={\url{}},
  note={Accessed February 2016},
